--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseURL = "http://example.org/"
+baseURL = "https://agupta54.github.io"
 languageCode = "en-us"
-title = "Looking through the lens of mathmatics"
+title = "through the lens of mathmatics"
 theme = "mainroad"
 disqusShortname = "disqus_l5sqC5oLSM"
 
