--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://agupta54.github.io"
 languageCode = "en-us"
-title = "through the lens of mathmatics"
+title = "Through the lens of mathematics"
 theme = "mainroad"
 disqusShortname = "disqus_l5sqC5oLSM"
 
@@ -9,7 +9,7 @@ disqusShortname = "disqus_l5sqC5oLSM"
 
 [Params]
     subtitle = "Anirudh Gupta"
-    description = "Anirudh Gupta's blog about everything"
+    description = "Making things simple through math"
     opengraph = true
     twitter_cards = true
     readmore = false
